# mr2s-module

./: .gitignore  AGENTS.md  README.ko.md  README.md  pyproject.toml  requirements.txt
.agents/assets/: release-template.md
.github/workflows/: publish.yml
.plan/unticketed/: 2026-06-02-add-qubo-solve-context.md  2026-06-03-handle-empty-sampleset-fallback.md
docs/: CI_CD_PIPELINE.md  DNC_MR2S_SOLVER_PERFORMANCE_ANALYSIS.md
mr2s_module/: __init__.py  protocols.py
mr2s_module/cycle/: __init__.py  face_cluster_partition.py  face_clusterer.py  face_cycle.py  planar_region_partition.py  robbin_cycle.py  t_join_cycle.py
mr2s_module/domain/: __init__.py  adj_entry.py  edge.py  embeddable_graph_partition.py  graph.py  graph_partition_result.py  orientation.py  orientation_result.py  score.py  solution.py
mr2s_module/edge_orient/: __init__.py  iterated_local_search.py  orientation.py  robbin.py  t_join.py
mr2s_module/evaluator/: __init__.py  apsp_sum_evaluator.py  apsp_sum_ranker.py  evaluator.py
mr2s_module/qubo/: __init__.py  flow_poly_generator.py  n_hop_poly_generator.py  qa_qubo_solver.py  qubo_solver.py  sa_qubo_solver.py  solution_processing.py
mr2s_module/service/: __init__.py  polynomial_optimization_service.py
mr2s_module/solver/: __init__.py  dnc_graph_partition_strategy.py  dnc_mr2s_solver.py  mr2s_solver.py  process_runner.py  qubo_mr2s_solver.py  sa_mr2s_solver.py  solve_context.py
mr2s_module/util/: __init__.py  caching.py  embedding_util.py  graph_orient.py  planar_graph.py  (+2 more)
tests/: conftest.py  run_sa_qubo_solver_demo.py  test_package_exports.py
(+30 files in other folders)
