[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mr2s-module"
version = "0.0.1"
description = "module for mr2s problem"
authors = ["Lee YoHwan dldyghks123@naver.com",
            "Kim SeYeop ksy1001k96@gmail.com",
            "Jeong YunSeong me@yunseong.dev"]
requires-python = ">=3.11"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "colorama==0.4.6",
    "h11==0.16.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "dwave-ocean-sdk",
]