[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mr2s-module"
dynamic = ["version"]
description = "module for mr2s problem"
authors = [
    { name = "Lee Yohwan", email = "dldyghks123@naver.com" },
    { name = "Kim Seyeop", email = "ksy1001k96@gmail.com" },
    { name = "Jeong Yunseong", email = "me@yunseong.dev" },
]
requires-python = ">=3.11"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "colorama==0.4.6",
    "h11==0.16.0",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "dwave-ocean-sdk",
    "networkx",
    "numpy",
]

[project.optional-dependencies]
test = [
    "pytest",
    "scipy",
    "matplotlib",
]

[tool.hatch.version]
source = "vcs"
tag-pattern = "^v(?P<version>.+)$"

[tool.pytest.ini_options]
markers = [
    "slow: long-running tests (full QUBO pipeline with SA), deselect with -m 'not slow'",
]
